[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/main.gd" type="Script" id=2]
[ext_resource path="res://Main/add_to_blank.gd" type="Script" id=3]
[ext_resource path="res://player/player_info.gd" type="Script" id=4]
[ext_resource path="res://Main/order_of_moves.gd" type="Script" id=5]
[ext_resource path="res://Main/pass_turn.gd" type="Script" id=6]
[ext_resource path="res://Main/pause.gd" type="Script" id=7]
[ext_resource path="res://Main/activate_blank.gd" type="Script" id=8]
[ext_resource path="res://blank/advantage.tscn" type="PackedScene" id=9]
[ext_resource path="res://Main/impact_of_impacts.gd" type="Script" id=10]

[sub_resource type="Theme" id=1]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 105.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="global_timer" type="Timer" parent="."]

[node name="players" type="Node" parent="."]

[node name="left_player" parent="players" instance=ExtResource( 1 )]

[node name="right_player" parent="players" instance=ExtResource( 1 )]

[node name="bg" type="PanelContainer" parent="."]
margin_right = 1300.0
margin_bottom = 650.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rows" type="VBoxContainer" parent="bg"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1293.0
margin_bottom = 643.0

[node name="cols" type="HBoxContainer" parent="bg/rows"]
margin_right = 1286.0
margin_bottom = 14.0
alignment = 1

[node name="left_player" type="Label" parent="bg/rows/cols"]
margin_right = 641.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "badsf"
align = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_player" type="Label" parent="bg/rows/cols"]
margin_left = 645.0
margin_right = 1286.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "badsf"
align = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tabs" type="TabContainer" parent="bg/rows"]
margin_top = 18.0
margin_right = 1286.0
margin_bottom = 636.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preparation" type="Tabs" parent="bg/rows/tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="grid" type="GridContainer" parent="bg/rows/tabs/preparation"]
margin_left = 7.0
margin_top = 7.0
margin_right = 579.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_player" type="HBoxContainer" parent="bg/rows/tabs/preparation/grid"]
margin_right = 349.0
margin_bottom = 122.0

[node name="vials" type="PanelContainer" parent="bg/rows/tabs/preparation/grid/left_player"]
margin_right = 34.0
margin_bottom = 30.0
size_flags_vertical = 0

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/preparation/grid/left_player/vials"]
margin_left = 7.0
margin_top = 7.0
margin_right = 27.0
margin_bottom = 23.0

[node name="slider" type="VSlider" parent="bg/rows/tabs/preparation/grid/left_player/vials/cols"]
margin_right = 16.0
margin_bottom = 16.0

[node name="childs" type="VBoxContainer" parent="bg/rows/tabs/preparation/grid/left_player/vials/cols"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stencils" type="PanelContainer" parent="bg/rows/tabs/preparation/grid/left_player"]
margin_left = 38.0
margin_right = 222.0
margin_bottom = 72.0
rect_min_size = Vector2( 184, 72 )
size_flags_vertical = 0

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/preparation/grid/left_player/stencils"]
margin_left = 7.0
margin_top = 7.0
margin_right = 177.0
margin_bottom = 65.0

[node name="slider" type="VSlider" parent="bg/rows/tabs/preparation/grid/left_player/stencils/cols"]
margin_right = 16.0
margin_bottom = 58.0

[node name="childs" type="VBoxContainer" parent="bg/rows/tabs/preparation/grid/left_player/stencils/cols"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blanks" type="PanelContainer" parent="bg/rows/tabs/preparation/grid/left_player"]
margin_left = 226.0
margin_right = 349.0
margin_bottom = 122.0
size_flags_vertical = 0

[node name="rows" type="VBoxContainer" parent="bg/rows/tabs/preparation/grid/left_player/blanks"]
margin_left = 7.0
margin_top = 7.0
margin_right = 116.0
margin_bottom = 115.0

[node name="pass_turn" type="CheckButton" parent="bg/rows/tabs/preparation/grid/left_player/blanks/rows"]
margin_right = 109.0
margin_bottom = 40.0
text = "pass"
script = ExtResource( 6 )

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/preparation/grid/left_player/blanks/rows"]
margin_top = 44.0
margin_right = 109.0
margin_bottom = 60.0

[node name="slider" type="VSlider" parent="bg/rows/tabs/preparation/grid/left_player/blanks/rows/cols"]
margin_right = 16.0
margin_bottom = 16.0

[node name="childs" type="VBoxContainer" parent="bg/rows/tabs/preparation/grid/left_player/blanks/rows/cols"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add_to_blank" type="Button" parent="bg/rows/tabs/preparation/grid/left_player/blanks/rows"]
margin_top = 64.0
margin_right = 109.0
margin_bottom = 84.0
text = "add"
script = ExtResource( 3 )

[node name="activate_blank" type="Button" parent="bg/rows/tabs/preparation/grid/left_player/blanks/rows"]
margin_top = 88.0
margin_right = 109.0
margin_bottom = 108.0
text = "activate"
script = ExtResource( 8 )

[node name="battlefield" type="PanelContainer" parent="bg/rows/tabs/preparation/grid"]
margin_left = 353.0
margin_right = 485.0
margin_bottom = 54.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_pause" type="CheckButton" parent="bg/rows/tabs/preparation/grid/battlefield"]
margin_left = 7.0
margin_top = 7.0
margin_right = 125.0
margin_bottom = 47.0
text = "pause"
align = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_player" type="HBoxContainer" parent="bg/rows/tabs/preparation/grid"]
margin_left = 489.0
margin_right = 838.0
margin_bottom = 122.0

[node name="blanks" type="PanelContainer" parent="bg/rows/tabs/preparation/grid/right_player"]
margin_right = 123.0
margin_bottom = 122.0
size_flags_vertical = 0

[node name="rows" type="VBoxContainer" parent="bg/rows/tabs/preparation/grid/right_player/blanks"]
margin_left = 7.0
margin_top = 7.0
margin_right = 116.0
margin_bottom = 115.0

[node name="pass_turn" type="CheckButton" parent="bg/rows/tabs/preparation/grid/right_player/blanks/rows"]
margin_right = 109.0
margin_bottom = 40.0
text = "pass"
script = ExtResource( 6 )

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/preparation/grid/right_player/blanks/rows"]
margin_top = 44.0
margin_right = 109.0
margin_bottom = 60.0

[node name="childs" type="VBoxContainer" parent="bg/rows/tabs/preparation/grid/right_player/blanks/rows/cols"]
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider" type="VSlider" parent="bg/rows/tabs/preparation/grid/right_player/blanks/rows/cols"]
margin_left = 4.0
margin_right = 20.0
margin_bottom = 16.0

[node name="add_to_blank" type="Button" parent="bg/rows/tabs/preparation/grid/right_player/blanks/rows"]
margin_top = 64.0
margin_right = 109.0
margin_bottom = 84.0
text = "add"
script = ExtResource( 3 )

[node name="activate_blank" type="Button" parent="bg/rows/tabs/preparation/grid/right_player/blanks/rows"]
margin_top = 88.0
margin_right = 109.0
margin_bottom = 108.0
text = "activate"
script = ExtResource( 8 )

[node name="stencils" type="PanelContainer" parent="bg/rows/tabs/preparation/grid/right_player"]
margin_left = 127.0
margin_right = 311.0
margin_bottom = 70.0
rect_min_size = Vector2( 184, 70 )
size_flags_vertical = 0

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/preparation/grid/right_player/stencils"]
margin_left = 7.0
margin_top = 7.0
margin_right = 177.0
margin_bottom = 63.0

[node name="childs" type="VBoxContainer" parent="bg/rows/tabs/preparation/grid/right_player/stencils/cols"]
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider" type="VSlider" parent="bg/rows/tabs/preparation/grid/right_player/stencils/cols"]
margin_left = 4.0
margin_right = 20.0
margin_bottom = 56.0

[node name="vials" type="PanelContainer" parent="bg/rows/tabs/preparation/grid/right_player"]
margin_left = 315.0
margin_right = 349.0
margin_bottom = 30.0
size_flags_vertical = 0

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/preparation/grid/right_player/vials"]
margin_left = 7.0
margin_top = 7.0
margin_right = 27.0
margin_bottom = 23.0

[node name="childs" type="VBoxContainer" parent="bg/rows/tabs/preparation/grid/right_player/vials/cols"]
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider" type="VSlider" parent="bg/rows/tabs/preparation/grid/right_player/vials/cols"]
margin_left = 4.0
margin_right = 20.0
margin_bottom = 16.0
theme = SubResource( 1 )

[node name="impact" type="Tabs" parent="bg/rows/tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="players" type="HBoxContainer" parent="bg/rows/tabs/impact"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1270.0
margin_bottom = 443.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="onslaught" parent="bg/rows/tabs/impact/players" instance=ExtResource( 9 )]
margin_bottom = 436.0
size_flags_horizontal = 3

[node name="breakaways" type="PanelContainer" parent="bg/rows/tabs/impact/players"]
margin_left = 619.0
margin_right = 667.0
margin_bottom = 436.0
size_flags_horizontal = 0

[node name="grid" type="GridContainer" parent="bg/rows/tabs/impact/players/breakaways"]
margin_left = 7.0
margin_top = 7.0
margin_right = 41.0
margin_bottom = 429.0

[node name="cargo" type="VBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid"]
margin_right = 34.0
margin_bottom = 14.0

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid/cargo"]
margin_right = 34.0
margin_bottom = 14.0

[node name="onslaught" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/cargo/cols"]
margin_right = 15.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )
custom_colors/font_color = Color( 1, 0.25098, 0.45098, 1 )

[node name="retention" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/cargo/cols"]
margin_left = 19.0
margin_right = 34.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )
custom_colors/font_color = Color( 1, 0.25098, 0.45098, 1 )
align = 2

[node name="recce" type="VBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid"]
margin_top = 18.0
margin_right = 34.0
margin_bottom = 32.0

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid/recce"]
margin_right = 34.0
margin_bottom = 14.0

[node name="onslaught" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/recce/cols"]
margin_right = 8.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.94902, 0.25098, 1 )
text = "1"

[node name="retention" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/recce/cols"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.94902, 0.25098, 1 )
text = "1"
align = 2

[node name="feint" type="VBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid"]
margin_top = 36.0
margin_right = 34.0
margin_bottom = 50.0

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid/feint"]
margin_right = 34.0
margin_bottom = 14.0

[node name="onslaught" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/feint/cols"]
margin_bottom = 14.0
custom_colors/font_color = Color( 0.25098, 1, 0.34902, 1 )

[node name="retention" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/feint/cols"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.25098, 1, 0.34902, 1 )
align = 2

[node name="depth" type="VBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid"]
margin_top = 54.0
margin_right = 34.0
margin_bottom = 68.0

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid/depth"]
margin_right = 34.0
margin_bottom = 14.0

[node name="onslaught" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/depth/cols"]
margin_bottom = 14.0
custom_colors/font_color = Color( 0.25098, 0.74902, 1, 1 )

[node name="retention" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/depth/cols"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.25098, 0.74902, 1, 1 )
align = 2

[node name="spoof" type="VBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid"]
margin_top = 72.0
margin_right = 34.0
margin_bottom = 86.0

[node name="cols" type="HBoxContainer" parent="bg/rows/tabs/impact/players/breakaways/grid/spoof"]
margin_right = 34.0
margin_bottom = 14.0

[node name="onslaught" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/spoof/cols"]
margin_bottom = 14.0
custom_colors/font_color = Color( 0.65098, 0.25098, 1, 1 )

[node name="retention" type="Label" parent="bg/rows/tabs/impact/players/breakaways/grid/spoof/cols"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.65098, 0.25098, 1, 1 )
align = 2

[node name="retention" parent="bg/rows/tabs/impact/players" instance=ExtResource( 9 )]
margin_left = 671.0
margin_right = 1286.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="order_of_orders" type="Node" parent="."]
script = ExtResource( 5 )

[node name="impact_of_impacts" type="Node" parent="."]
script = ExtResource( 10 )

[connection signal="timeout" from="global_timer" to="." method="_on_global_timer_timeout"]
[connection signal="pressed" from="bg/rows/tabs/preparation/grid/left_player/blanks/rows/pass_turn" to="bg/rows/tabs/preparation/grid/left_player/blanks/rows/pass_turn" method="_on_pass_turn_pressed"]
[connection signal="pressed" from="bg/rows/tabs/preparation/grid/left_player/blanks/rows/add_to_blank" to="bg/rows/tabs/preparation/grid/left_player/blanks/rows/add_to_blank" method="_on_add_to_blank_pressed"]
[connection signal="pressed" from="bg/rows/tabs/preparation/grid/left_player/blanks/rows/activate_blank" to="bg/rows/tabs/preparation/grid/left_player/blanks/rows/activate_blank" method="_on_activate_blank_pressed"]
[connection signal="pressed" from="bg/rows/tabs/preparation/grid/battlefield/game_pause" to="bg/rows/tabs/preparation/grid/battlefield/game_pause" method="_on_game_pause_pressed"]
[connection signal="pressed" from="bg/rows/tabs/preparation/grid/right_player/blanks/rows/pass_turn" to="bg/rows/tabs/preparation/grid/right_player/blanks/rows/pass_turn" method="_on_pass_turn_pressed"]
[connection signal="pressed" from="bg/rows/tabs/preparation/grid/right_player/blanks/rows/add_to_blank" to="bg/rows/tabs/preparation/grid/right_player/blanks/rows/add_to_blank" method="_on_add_to_blank_pressed"]
[connection signal="pressed" from="bg/rows/tabs/preparation/grid/right_player/blanks/rows/activate_blank" to="bg/rows/tabs/preparation/grid/right_player/blanks/rows/activate_blank" method="_on_activate_blank_pressed"]
